src/test/ui/self/arbitrary_self_types_pin_lifetime_impl_trait.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait.rs:6:44
   |
LL |     fn f(self: Pin<&Self>) -> impl Clone { self }
   |                               ----------   ^^^^ ...but this borrow...
   |                               |
   |                               this return type evaluates to the `'static` lifetime...
   |
note: ...can't outlive the anonymous lifetime #1 defined on the method body at 6:5
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait.rs:6:5
   |
LL |     fn f(self: Pin<&Self>) -> impl Clone { self }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: you can add a bound to the return type to make it last less than `'static` and match the anonymous lifetime #1 defined on the method body at 6:5
   |
LL |     fn f(self: Pin<&Self>) -> impl Clone + '_ { self }
   |                               ^^^^^^^^^^^^^^^

error: aborting due to previous error

